# Lookup

./: .gitignore  Cargo.toml  README.md  firstDoc.txt  firstDoctxt  occurances.txt  test.txt
data/: ?.txt  Aliasing.txt  Alternate-custom key types.txt  Arc.txt  Argument parsing.txt  Arrays and Slices.txt  As input parameters.txt  As output parameters.txt  Associated functions & Methods.txt  Associated items.txt  Associated types.txt  Attributes.txt  Binding.txt  Borrowing.txt  Bounds.txt  Box, stack and heap.txt  Box.txt  Build Scripts.txt  C-like.txt  Capturing.txt  Cargo.txt  Casting.txt  Channels.txt  Child processes.txt  Clone.txt  Closures.txt  Coercion.txt  Combinators: .txt  Comments.txt  Compatibility.txt  Conventions.txt  Conversion.txt  Crates.txt  Creating a Library.txt  Custom Types.txt  Custom.txt  DRY (Don't Repeat Yourself).txt  Debug.txt  Declare first.txt  Defining an error type.txt  (+142 more)
src/: inverted_index.rs  lib.rs  main.rs  scraper.rs  search.rs  stop_words.rs
src/indexing/: index_handler.rs  mod.rs
src/scraper/: scraper.rs
