[package]
name = "lookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
reqwest = "0.11.22"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
scraper = "0.18.1"
clap =  { version = "4.4.11", features = ["derive"] }
